# californiahousepricing

./: App.py  README.md  README.md.md  california_house_pricing .ipynb  california_house_pricing.ipynb  requirements.txt  rf_model.pkl
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
project-dir/: pyproject.toml
templates/: home.html
