[tool.poetry]
name = "cls"
version = "0.1.0"
description = ""
authors = ["Sakshirai55555555555 <21f3002913@student.onlinedegree.iitm.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
